# hamster_ws

./: README.md
catkin_ws2/: frames.gv
catkin_ws2/devel/: .catkin  .rosinstall  _setup_util.py
hamster_robot_loc/: CMakeLists.txt  README.md  package.xml
hamster_robot_loc/launch/: amcl.launch  hamster_mapping.launch  hamster_sim.launch  karto.launch  rl_odom.launch  rl_odom_ukf.launch  rl_scan.launch
hamster_robot_loc/map/: map_karto.pgm  map_karto.yaml
hamster_robot_loc/params/: amcl.yaml  karto_mapper_params.yaml  rl_map.yaml  rl_odom.yaml  scan_matching_param.yaml
hamster_robot_loc/rviz/: hamsters.rviz
hamster_robot_loc/src/: ack2cmd_vel.py  amcl2odom.py  pose2odom.py
hamster_vehicle/config/: dwa_params.yaml  local_costmap_params.yaml  planner.yaml
hamster_vehicle/launch/: amcl.movebase.launch  empty_world.launch  hamster_pathplan.launch  hamster_real.launch  hamster_real2.launch  hamster_real_karto.launch  hamster_realcopy.launch  hamster_sim .launch
hamster_vehicle/rviz/: hamsters.rviz
mapping_controller/: CMakeLists.txt
mapping_controller/launch/: mode_selector.launch  server_side.launch
mapping_controller/launch/localization/: amcl.launch  gps_localization.launch
mapping_controller/launch/mapping/: gmapping.launch  hector_mapping.launch  karto.launch  mapping_selector.launch
mapping_controller/maps/: emptyoffice.pgm  emptyoffice.yaml  indoor.pgm  indoor.yaml  st123.pgm  st123.yaml  versenypalya.pgm  versenypalya.yaml
mapping_controller/params/: amcl.yaml  karto_mapper_params.yaml
mapping_controller/src/: server_side.cpp
(+58 files in other folders)
