CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(mapping_controller)

FIND_PACKAGE(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system)

CATKIN_PACKAGE()

INCLUDE_DIRECTORIES(
  ${catkin_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(client_side src/client_side.cpp)
TARGET_LINK_LIBRARIES(client_side
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(server_side src/server_side.cpp)
TARGET_LINK_LIBRARIES(server_side
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
)

INSTALL(TARGETS client_side server_side
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

INSTALL(DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch/
)